add token (class 16)
