# ginchat/router/router.go
@@ -19,6 +19,6 @@ func Router() *gin.Engine {
 	r.POST("/user/createUser", service.CreateUser)
 	r.POST("/user/deleteUser", service.DeleteUser)
 	r.POST("/user/updateUser", service.UpdateUser)
-	r.POST("/user/searchUserByNameAndPassword", service.SearchUserByNameAndPassword)
+	r.POST("/user/loginUserByNameAndPassword", service.LoginUserByNameAndPassword)
 	return r
 }
